# akwlib-export

./: .gitignore  LICENSE  README.md  akwlib_to_sqlite.py  city.py  export_lib.py  main.py  make-akw-data.py  pyproject.toml  requirements.txt  run.sh  tmy.py  util.py
data/tmy3-raw/: design_temps.xlsx
data/v01/: city.csv  city.pkl  cur-lib-name.txt  lib.db  misc_info.csv  misc_info.pkl  utility.csv  utility.pkl
data/v01/tmy3/: 700197.csv  700197.pkl  700260.csv  700260.pkl  700637.csv  700637.pkl  701043.csv  701043.pkl  701195.csv  701195.pkl  701330.csv  701330.pkl  701625.csv  701625.pkl  701718.csv  701718.pkl  701740.csv  701740.pkl  701780.csv  701780.pkl  701940.csv  701940.pkl  702000.csv  702000.pkl  702005.csv  702005.pkl  702035.csv  702035.pkl  702040.csv  702040.pkl  702070.csv  702070.pkl  702075.csv  702075.pkl  702084.csv  702084.pkl  702185.csv  702185.pkl  702186.csv  702186.pkl  (+108 more)
other_data/: README.md  aris_city_to_census_lookups.csv
queries/: city.sql  miscellaneousinformation.sql  utility.sql
