[project]
name = "akwlib-export"
version = "0.1.0"
description = "Exports most recent AkWarm Library to SQLite and CSV formats."
readme = "README.md"
requires-python = ">=3.11, <4"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0, <3",
    "python-levenshtein>=0.27.3",
    "requests>=2.32.5",
]
